--- a/session6video/index.css
+++ b/session6video/index.css
@@ -2,7 +2,7 @@
     color: red;
 }
 
-#bai2 {
+.bai2 {
     background-color: red;
 }
 
@@ -10,12 +10,12 @@
     font-size: 24px;
 }
 
-#bai4 {
+.bai4 {
     font-size: 3em;
     background: wheat
 }
 
-#div2 h1 {
+.div2 h1 {
     color: blue;
 }
 
